--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#00BCD4</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="gray">#EDEDED</color>
+    <color name="gray">#F0F0F0</color>
     <color name="navigation_bg">#A5FFFFFF</color>
 </resources>
