--- a/app/src/main/res/navigation/nav_account.xml
+++ b/app/src/main/res/navigation/nav_account.xml
@@ -16,10 +16,10 @@
         android:name="com.loogen.wanandroid.ui.fragment.RegisterFragment"
         android:label="RegisterFragment">
         <action
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
             android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit" />
     </fragment>
 
 
