--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,14 @@
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
+
+    <style name="ItemText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_normal</item>
+    </style>
+
+    <style name="ItemTextLabel" parent="ItemText">
+        <item name="android:textColor">@color/text_gray</item>
+    </style>
+
 </resources>
