--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            app:layout_constraintVertical_weight="1">
 
             <com.scwang.smart.refresh.header.MaterialHeader
                 android:layout_width="match_parent"
